# rikerio

./: .gitignore  .travis-build.sh  .travis.yml  .vimrc  CMakeLists.txt  README.md  meson.build  spec.json  version.h.in
cmake/modules/: GetGitRevisionDescription.cmake  cpack.cmake  googletest.cmake  json-rpc-cpp.cmake  jsoncpp.cmake  spdlog.cmake  version.cmake
debian/: README.source  changelog  control  debhelper-build-stamp  files  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  postinst  postrm  preinst.ex  prerm.ex  rikerio.doc-base.EX  rikerio.substvars
debian/.debhelper/rikerio/: dbgsym-build-ids
debian/.debhelper/rikerio/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/rikerio/dbgsym-root/usr/share/doc/: rikerio-dbgsym
debian/rikerio/DEBIAN/: control  md5sums  postinst  postrm  shlibs
debian/rikerio/usr/lib/x86_64-linux-gnu/: librikerio.so.3.0  librikerio.so.3.0.0
debian/rikerio/usr/sbin/: rio-server
debian/rikerio/usr/share/doc/rikerio/: README.Debian  copyright
include/: config.h  eventloop.h  master.h  rikerio.h  rikerio.h.in  server.h  stubclient.h  version.h.in
include/client/: abstract-client.h  abstract-response.h  allocation.h  client.h  data.h  profile.h  request.h  response.h  task.h
include/client/request/: config-get.h  data-add.h  data-list.h  data-remove.h  link-add.h  link-list.h  link-remove.h  memory-alloc.h  memory-dealloc.h  memory-list.h
include/client/response/: config-get.h  data-add.h  data-list.h  data-remove.h  link-add.h  link-list.h  link-remove.h  memory-alloc.h  memory-dealloc.h  memory-list.h
include/common/: config.h  data.h  datatypes.h  error.h  master.h  mem-position.h  memory.h  owner.h  readable.h  semaphore.h  task.h  type.h  utils.h  writeable.h
include/server/: abstractstubserver.h  config-get.h  data-add.h  data-list.h  data-map.h  data-remove.h  data.h  link-add.h  link-list.h  link-map.h  link-remove.h  memory-alloc.h  memory-area.h  memory-dealloc.h  memory-get.h  memory-list.h  memory.h  monitor-request.h  monitor.h  server-interface.h  server-json.h  server.h  shared-memory.h  token.h
src/: add-alias.c  add-link.cpp  eventloop.cpp  list-alias.c  list-link.cpp  main.c  master-create.cpp  master-list.cpp  master-remove.cpp  master.c  master.cpp  rikerio.c  rikerio.cpp  rm-alias.c  rm-alias.cpp  rm-link.cpp  server-main.cpp  server.c  server.cpp  test.c  test.cpp
src/cli/: CMakeLists.txt  config-get.cpp  data-add.cpp  data-create.cpp  data-list.cpp  data-remove.cpp  link-add.cpp  link-list.cpp  link-remove.cpp  master-create.cpp  master-list.cpp  master-remove.cpp  memory-alloc.cpp  memory-dealloc.cpp  memory-list.cpp  read.cpp  rio.cpp
src/client/: CMakeLists.txt  allocation.cpp  client.cpp  profile.cpp  task.cpp
src/client/request/: data-add.cpp  data-list.cpp  data-remove.cpp  link-add.cpp  link-list.cpp  link-remove.cpp  memory-alloc.cpp  memory-dealloc.cpp
src/client/response/: config-get.cpp  data-add.cpp  data-list.cpp  data-remove.cpp  link-add.cpp  link-list.cpp  link-remove.cpp  memory-alloc.cpp  memory-dealloc.cpp  memory-list.cpp
src/common/: CMakeLists.txt  config.cpp  data.cpp  master.cpp  mem-position.cpp  memory.cpp  semaphore.cpp  task.cpp  type.cpp  utils.cpp
src/server/: CMakeLists.txt  data-map.cpp  data.cpp  link-map.cpp  main.cpp  memory.cpp  server-json.cpp  server-main.cpp  server.cpp  shared-memory.cpp
test/: CMakeLists.txt  helper.h
test/client/: config-get.test.cpp  request.test.cpp  response.test.cpp
test/common/: mem-position.test.cpp  type.test.cpp
test/lib/: data.test.cpp  memory.test.cpp  mockstubclient.h  task.test.cpp
